GEOS-5219, using path only syntax to indicate back reference for metadata link url